# S2_BSYS_A3_sharedMemory

./: CMakeLists.txt  README.md  r_main.c  s_main.c
receiver/: r_definitions.h  r_memoryManagement.c  r_memoryManagement.h  r_parameters.c  r_parameters.h
receiverf/: r_memoryManagement.c  r_parameters.h
sender/: s_definitions.h  s_memoryManagement.c  s_memoryManagement.h  s_parameters.c  s_parameters.h
senderf/: s_memoryManagement.c  s_parameters.c  s_parameters.h
shared/: definitions.h  keyGen  keyGen2  sharedFunctions.c  sharedFunctions.h
